# parseanitube

./: .gitignore  LICENSE  README.md  anidiff.json  animes.json  pyproject.toml
parseanitube/: anitube.py  controller.py  main.py
